src_old/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>AccountBudget__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account Budget</description>
        <inlineHelpText>Account Budget</inlineHelpText>
        <label>Account Budget</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AccountBudget__c.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AccountBudget__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BillToContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BillTo Contact</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Invalid BillTo Contact. Select one that has the same billing account as the opportunity.</errorMessage>
            <filterItems>
                <field>Contact.BillToAccount__r.Id</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CycleNumber__c</fullName>
        <label>Cycle #</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HasFulfillment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Fulfillment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsHoliday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Holiday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NumberOfLocations__c</fullName>
        <label># of Locations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PONumber__c</fullName>
        <label>PO #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent Opportunity</description>
        <inlineHelpText>Parent Opportunity</inlineHelpText>
        <label>Parent Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Partner Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PreBill__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pre Bill</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProjectBuilderUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Builder</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectEndDate__c</fullName>
        <label>Project End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProjectStartDate__c</fullName>
        <label>Project Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProjectType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Type</label>
        <referenceTo>ProjectType__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QuotedTime__c</fullName>
        <label>Quoted Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RecordTypeDeveloperName__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecordType Developer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestedDate__c</fullName>
        <description>Date client would prefer for the requested service.</description>
        <inlineHelpText>Date client would prefer for the requested service.</inlineHelpText>
        <label>Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reservation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reservation</label>
        <referenceTo>Reservation__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ResponsibleParty__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ResponsibleParty</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (ResponsibleParty)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Retailer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Retailer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Retailer Account</relationshipLabel>
        <relationshipName>Retailer</relationshipName>
        <type>Lookup</type>
    </fields>
    <validationRules>
        <fullName>Limit_opportunity_to_45_characters</fullName>
        <active>true</active>
        <errorConditionFormula>Len( Name ) &gt; 45</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Please limit the Opportunity name to 45 characters</errorMessage>
    </validationRules>
</CustomObject>